argocd/base/navidrome/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`navidrome.streamixs.com`)
      kind: Rule
      services:
        - name: navidrome
          port: 4533
  tls: {}
